[tool.poetry]
name = "repl_nix_Youtubeplaylistnotifier-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
telebot = "^0.0.5"
Flask = "^2.3.2"
Flask-Cors = "^4.0.0"
pymongo = "^4.4.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
